crates/pcb-zen-core/tests/snapshots/net__ground_cannot_promote_to_not_connected.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
Error: test.zen:11:1-32 Error instantiating `child`
Error: /child.zen:7:6-28 Input 'nc' has wrong net type: expected NotConnected, got Ground
