crates/pcb-zen-core/tests/snapshots/net__interface_net_template_naming.snap
---
source: crates/pcb-zen-core/tests/net.rs
assertion_line: 287
expression: output
---
regular net: REGULAR_VCC
interface net: POWER_VCC
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
