crates/pcb-zen-core/tests/snapshots/net__io_default_not_connected_promotes_to_net.snap
---
source: crates/pcb-zen-core/tests/net.rs
assertion_line: 611
expression: output
---
io() default NotConnected promotes to Net: success
Warning: test.zen:5:9-28 Warning from `child.zen`
Warning: /child.zen:8:6-56 io() parameter `default` is deprecated; prefer template-first `io(template)` instead
Warning: test.zen:8:1-22 Warning from `child`
Warning: /child.zen:8:6-56 io() parameter `default` is deprecated; prefer template-first `io(template)` instead
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
    child: Module {
        path: child,
        source: "/child.zen",
        children: [
            FrozenValue(
                Component {
                    name: "R1",
                    footprint: "package://stdlib/kicad-footprints/Resistor_SMD.pretty/R_0402_1005Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "1": FrozenValue(
                            Net {
                                name: "",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "1",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
