crates/pcb-zen-core/tests/snapshots/net__net_base_attrs_unset.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
has voltage: True
has impedance: True
voltage: None
impedance: None
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
