crates/pcb-zen-core/tests/snapshots/net__net_duplicate_names_uniq.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
en1: EN
en2: EN_2
Warning: test.zen:7:7-16 Net 'EN' was renamed to 'EN_2' due to name collision
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "U1",
                    footprint: "TEST:0402",
                    prefix: "U",
                    connections: {
                        "EN": FrozenValue(
                            Net {
                                name: "EN",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "EN",
                            },
                        },
                    ),
                },
            ),
            FrozenValue(
                Component {
                    name: "U2",
                    footprint: "TEST:0402",
                    prefix: "U",
                    connections: {
                        "EN": FrozenValue(
                            Net {
                                name: "EN_2",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "EN",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
