crates/pcb-zen-core/tests/snapshots/net__net_explicit_none_clears_inherited_voltage.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
base voltage: 5V
cleared voltage: None
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
