crates/pcb-zen-core/tests/snapshots/net__net_field_default_applied.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
vcc.voltage: 3.3V
Module {
    name: "<root>",
    source: "test.zen",
}
[]
